# SystemExtensions

./: .gitignore  AlastairLundy.Extensions.System.sln  LICENSE  LICENSE.txt  README.md  SECURITY.md  Version History.md
AlastairLundy.Extensions.Collections/: AlastairLundy.Extensions.Collections.csproj  AlastairLundy.Extensions.Collections.csproj.DotSettings  HashMap.cs  IBigCollection.cs  IHashMap.cs
AlastairLundy.Extensions.Collections/Dictionaries/: DictionaryGetKeyExtensions.cs  DictionaryToExtensions.cs
AlastairLundy.Extensions.Collections/HashMaps/: HashMapPutExtensions.cs
AlastairLundy.Extensions.Collections/IEnumerables/: CombineExtensions.cs  DeDuplicateExtensions.cs  FrequencyOfExtensions.cs  IndexExtensions.cs  ToStringEnumerablesExtensions.cs
AlastairLundy.Extensions.Dates/: AlastairLundy.Extensions.Dates.csproj  AlastairLundy.Extensions.Dates.csproj.DotSettings  DateNamesExtensions.cs  DateTimeSubtractExtensions.cs  DayOfExtensions.cs  GivenDatesExtensions.cs  LongTodayDateExtension.cs  WeekOfExtensions.cs
AlastairLundy.Extensions.Dates/DateOnly/: DateOnlySubtractionExtensions.cs  DateOnlyToDateTimeExtension.cs
AlastairLundy.Extensions.Dates/DateOnlyExtensions/: DateOnlySubtractionExtensions.cs  DateOnlyToDateTimeExtension.cs
AlastairLundy.Extensions.Generics/: AlastairLundy.Extensions.Generics.csproj
AlastairLundy.Extensions.Maths/: AlastairLundy.Extensions.Maths.csproj
AlastairLundy.Extensions.Maths/Averages/: ArithmeticMeanExtensions.cs  GeometricMeanExtensions.cs  MedianExtensions.cs  (+3 more)
AlastairLundy.Extensions.Processes/: AlastairLundy.Extensions.Processes.csproj  GetProcessFromNameExtension.cs  IsProcessRunningExtensions.cs  ProcessWaitForExitAsyncExtensions.cs  SanitizeProcessNamesExtensions.cs
AlastairLundy.Extensions.Spectre.Console/: AlastairLundy.Extensions.Spectre.Console.sln
AlastairLundy.Extensions.String/: AlastairLundy.Extensions.String.csproj  SarcasmText.cs  SarcasmTextBuilder.cs
AlastairLundy.Extensions.Strings/: AlastairLundy.Extensions.Strings.csproj  SarcasmText.cs  SarcasmTextBuilder.cs
AlastairLundy.Extensions.System/: AlastairLundy.Extensions.System.csproj  AlastairLundy.Extensions.System.csproj.DotSettings  AlastairLundy.Extensions.System.sln  OperatingSystemExtensions.cs
AlastairLundy.Extensions.System.Collections/: AlastairLundy.Extensions.System.Collections.csproj  HashMap.cs  IBigCollection.cs  IHashMap.cs
AlastairLundy.Extensions.Urls/: AlastairLundy.Extensions.Urls.csproj  Url.cs  UrlBuilder.cs
AlastairLundy.Extensions.Versions/: AlastairLundy.Extensions.Versions.csproj  FriendlyVersionExtension.cs  IsAtLeastExtension.cs  IsNewerThanExtension.cs  IsOlderThanExtension.cs
AlastairLundy.System.Extensions/: AlastairLundy.System.Extensions.csproj  AlastairLundy.System.Extensions.sln
DevKit.DeveloperKit/: DevKit.DeveloperKit.csproj  DevKit.DeveloperKit.sln  HashMapV2.cs  ValueNotFoundException.cs
SystemExtensions.Tests/: SystemExtensions.Tests.csproj
cpp/: CMakeLists.txt  HashMapV2.cpp  HashMapV2.hpp  KeyValuePair.hpp  ObjectList.cpp  ObjectList.hpp  Version.cpp  Version.hpp
cpp/StringManipulation/: GenericStringProcessor.cpp  GenericStringProcessor.hpp  StringFormatter.cpp  StringFormatter.hpp
cpp/StringManipulation/TextProcessors/: ClickBaitTextProcessor.hpp  SarcasmTextProcessor.cpp  SarcasmTextProcessor.hpp
cpp/StringManipulation/TextProcessors/ClickBaitProcessing/: ClickBaitTextProcessor.cpp  ClickBaitTextProcessor.hpp
cpp/StringManipulation/TextProcessors/GenericStringProcessing/: GenericStringProcessor.cpp  GenericStringProcessor.hpp
cpp/StringManipulation/TextProcessors/SarcasmProcessing/: SarcasmTextProcessor.hpp
cpp/StringManipulation/TextProcessors/StringFormatter/: StringFormatter.cpp  StringFormatter.hpp
cpp/Types/: KeyValuePair.hpp
cpp/Types/DeveloperTypes/DateTime/Date/: Date.cpp  Date.hpp
cpp/Types/DeveloperTypes/DateTime/Time/: Time.cpp  Time.hpp
cpp/Types/DeveloperTypes/Stopwatch/: Stopwatch.cpp  Stopwatch.hpp
cpp/Types/DeveloperTypes/Version/: Version.cpp  Version.hpp
cpp/Types/Lists/: HashMapV2.hpp  ObjectList.cpp
cpp/Types/Lists/HashMap/: HashMapV2.cpp  HashMapV2.hpp
cpp/Types/Lists/ObjectList/: ObjectList.hpp
cpp/enums&constants/: StringConstants.hpp
cpp/src/StringManipulation/TextProcessors/ClickBaitProcessing/: ClickBaitTextProcessor.cpp
cpp/src/StringManipulation/TextProcessors/GenericStringProcessing/: GenericStringProcessor.cpp  GenericStringProcessor.hpp
cpp/src/StringManipulation/TextProcessors/SarcasmProcessing/: SarcasmTextProcessor.cpp  SarcasmTextProcessor.hpp
cpp/src/StringManipulation/TextProcessors/StringFormatter/: StringFormatter.cpp  StringFormatter.hpp
cpp/src/Types/DeveloperTypes/DateTime/: DateTime.hpp
cpp/src/Types/DeveloperTypes/Stopwatch/: Stopwatch.cpp  Stopwatch.hpp
cpp/src/Types/DeveloperTypes/Version/: Version.hpp
cpp/src/Types/Lists/: HashMapV2.hpp  ObjectList.hpp
csharp/: DevKit.DeveloperKit.sln
docs/: DATES_README.md  GENERICS_README.md  PROCESSES_README.md  STRINGS_README.md  URLS_README.md  VERSIONS_README.md
src/: DevKit.DeveloperKit.sln
(+371 files in other folders)
